{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 23,
  "lineage": "4b20985d-8725-4b47-f89a-ca13bdb81e1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079b5e5b3971bd10d",
            "arn": "arn:aws:ec2:ap-south-1:911593880882:instance/i-06c5eb704153d0cf6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c5eb704153d0cf6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mumbai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d35f6db1791f162",
            "private_dns": "ip-10-0-1-189.ap-south-1.compute.internal",
            "private_ip": "10.0.1.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0028540cb8dca55bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0639326d67913a4f1",
            "tags": {
              "Name": "First_instance"
            },
            "tags_all": {
              "Name": "First_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f6ac79b456c4a9f"
            ]
          },
          "dependencies": [
            "aws_subnet.mySubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079b5e5b3971bd10d",
            "arn": "arn:aws:ec2:ap-south-1:911593880882:instance/i-0059221316a4f1357",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0059221316a4f1357",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mumbai",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba8830a129de233f",
            "private_dns": "ip-10-0-2-160.ap-south-1.compute.internal",
            "private_ip": "10.0.2.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0365286be9f36ba65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04deb9af9008f3620",
            "tags": {
              "Name": "Second_instance"
            },
            "tags_all": {
              "Name": "Second_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f6ac79b456c4a9f"
            ]
          },
          "dependencies": [
            "aws_subnet.mySubnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911593880882:internet-gateway/igw-0b47b08a42acd07ec",
            "id": "igw-0b47b08a42acd07ec",
            "owner_id": "911593880882",
            "tags": {
              "Name": "MyinternetGateway"
            },
            "tags_all": {
              "Name": "MyinternetGateway"
            },
            "vpc_id": "vpc-0d3943f548302985d"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b47b08a42acd07ec",
            "id": "r-rtb-067a348c626fb42241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-067a348c626fb4224",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIgw",
            "aws_route_table.Myrt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Myrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911593880882:route-table/rtb-067a348c626fb4224",
            "id": "rtb-067a348c626fb4224",
            "owner_id": "911593880882",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MyRouteTable"
            },
            "tags_all": {
              "Name": "MyRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3943f548302985d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rTA1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010d26297b3161a74",
            "route_table_id": "rtb-067a348c626fb4224",
            "subnet_id": "subnet-0639326d67913a4f1"
          },
          "dependencies": [
            "aws_route_table.Myrt",
            "aws_subnet.mySubnet1",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rTA2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b2f6a7f38790e09",
            "route_table_id": "rtb-067a348c626fb4224",
            "subnet_id": "subnet-04deb9af9008f3620"
          },
          "dependencies": [
            "aws_route_table.Myrt",
            "aws_subnet.mySubnet2",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911593880882:security-group/sg-064e534c72e08cfdb",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064e534c72e08cfdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow traffic",
            "name_prefix": "",
            "owner_id": "911593880882",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group"
            },
            "tags_all": {
              "Name": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3943f548302985d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mySubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911593880882:subnet/subnet-0639326d67913a4f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0639326d67913a4f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911593880882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mySubnet1"
            },
            "tags_all": {
              "Name": "mySubnet1"
            },
            "vpc_id": "vpc-0d3943f548302985d"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mySubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911593880882:subnet/subnet-04deb9af9008f3620",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04deb9af9008f3620",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911593880882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mySubnet2"
            },
            "tags_all": {
              "Name": "mySubnet2"
            },
            "vpc_id": "vpc-0d3943f548302985d"
          },
          "dependencies": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911593880882:vpc/vpc-0d3943f548302985d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09de2152af7915009",
            "default_route_table_id": "rtb-0d65a111eab887a29",
            "default_security_group_id": "sg-00f6ac79b456c4a9f",
            "dhcp_options_id": "dopt-0d3d579dbb3224307",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d3943f548302985d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d65a111eab887a29",
            "owner_id": "911593880882",
            "tags": {
              "Name": "CustomVPC"
            },
            "tags_all": {
              "Name": "CustomVPC"
            }
          }
        }
      ]
    }
  ]
}